name:           show-network-info
version:        0.1
cabal-version:  >=1.2
build-type:     Simple
author:         cerdep

executable show-network-info
  hs-source-dirs:  src
  main-is:         Main.hs
  build-depends:   base >= 4
  ghc-options:     -Wall

library 
  build-depends:   
                   base >= 4,
                   network-info,
                   network
  hs-source-dirs:  src
  ghc-options:     -Wall

